--- a/src/CSimple/Pages/NetPage.xaml
+++ b/src/CSimple/Pages/NetPage.xaml
@@ -279,7 +279,7 @@
                                                     VerticalOptions="Center" />
                                             <!-- Open in File Explorer Button -->
                                             <Button Grid.Column="6"
-                                                    Text="📁"
+                                                    Text="File Explorer"
                                                     Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:NetPageViewModel}}, Path=OpenModelInExplorerCommand}"
                                                     CommandParameter="{Binding .}"
                                                     BackgroundColor="{StaticResource Tertiary}"
